Base game working!

--- a/index.html
+++ b/index.html
@@ -2,13 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>'Rennspiel' by 4dams</title>
+    <title>4dams' Minion Rush</title>
     <link rel="stylesheet" href="./styles.css">
 </head>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/4.8.1/pixi.min.js"></script>
 
 <body>
+    <!-- Loading somer bigger external Pixi functions first -->
+    <script src="./pixiExt.js"></script>
+
+    <!-- Loading the game itself -->
     <script src="./index.js"></script>
 </body>
 
