--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>4dams' Minion Rush</title>
+    <title>Minion Rush - 4da.ms</title>
     <link rel="stylesheet" href="./styles.css">
+    <link rel="icon" type="image/png" href="assets/images/gameIcon.png" />
 </head>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/4.8.1/pixi.min.js"></script>
 
 <body>
-    <!-- Loading somer bigger external Pixi functions first -->
+    <!-- Loading somer bigger external Pixi functions and variables first to keep the main code clean -->
     <script src="./pixiExt.js"></script>
 
     <!-- Loading the game itself -->
