Added lib folder and fixed autoplay issue

--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
     <link rel="icon" type="image/png" href="assets/images/gameIcon.png" />
 </head>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/4.8.1/pixi.min.js"></script>
-
 <body>
+
+    <!-- Loading PixiJS and the sound library -->
+    <script src="assets/lib/pixi.min.js"></script>
+    <script src="assets/lib/pixi-sound.js"></script>
+
     <!-- Loading somer bigger external Pixi functions and variables first to keep the main code clean -->
-    <script src="./pixiExt.js"></script>
+    <script src="assets/lib/pixiExt.js"></script>
 
     <!-- Loading the game itself -->
     <script src="./index.js"></script>
